# beatoraja_play_recommend

./: .dockerignore  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  buildspec.yml  config.toml  dev.sh  diesel.toml  docker-compose.yml  npm_publish.sh  run.sh  tables.toml
.github/workflows/: client.yml
crates/bpr_web/: Cargo.toml
crates/bpr_web/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: input.rs  lib.rs  out.rs  output.rs
crates/model/: Cargo.toml
crates/model/src/: account.rs  app.rs  command.rs  controller.rs  db.rs  lib.rs  player.rs  prelude.rs  rank.rs  score.rs  score_log.rs  scored_table.rs  security.rs  song.rs  song_detail.rs  summary.rs  table.rs
crates/model/src/account/: account.rs  gmail_address.rs  google_id.rs  prelude.rs  registered_date.rs  score_upload.rs  user_id.rs  user_name.rs  visibility.rs
crates/model/src/command/: command.rs  detail.rs  graph.rs  lamp.rs  lamp_graph.rs  prelude.rs  rank.rs  rank_graph.rs  recommend.rs
crates/model/src/schema/: score_log.rs
crates/model/src/score/: clear_count.rs  clear_type.rs  ex_score.rs  judge.rs  max_combo.rs  min_bp.rs  play_count.rs  prelude.rs  rank.rs  ranking.rs  score.rs  scores.rs  snap_range.rs  snapshot.rs  snapshots.rs  song_id.rs  updated_at.rs
crates/model/src/score_log/: prelude.rs  score_log.rs  snapshot.rs  snapshots.rs
crates/model/src/song/: artist.rs  hash.rs  hash_converter.rs  include_features.rs  level.rs  prelude.rs  song.rs  song_with_snap.rs  songs.rs  title.rs
crates/model/src/table/: chart.rs  charts.rs  prelude.rs  repository.rs  table.rs
crates/mysql/: Cargo.toml  config.toml
crates/mysql/src/: config.rs  error.rs  lib.rs  models.rs  query.rs  schema.rs
crates/mysql/src/models/: hashes.rs  player_stats.rs  revoked_sessions.rs  score.rs  score_snaps.rs  score_upload.rs  scores.rs  songs.rs  upload_stats.rs  user.rs  user_statues.rs  users.rs
crates/oauth_google/: Cargo.toml
crates/oauth_google/src/: config.rs  error.rs  lib.rs
crates/play_data/: Cargo.toml
crates/play_data/src/: lib.rs
crates/play_data/src/schema/: player.rs  song.rs
crates/repository/: Cargo.toml
crates/repository/src/: lib.rs
crates/send_slack/: Cargo.toml
crates/send_slack/src/: config.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: cache_tags.rs  config.rs  error.rs  filter.rs  handler.rs  main.rs  routes.rs  session.rs
crates/server/src/handler/: account.rs  change_name.rs  change_visibility.rs  custom_table.rs  detail.rs  health.rs  logout.rs  oauth_redirect.rs  ranking.rs  songs.rs  tables.rs  upload.rs  users.rs
crates/server/src/routes/: account.rs  authorization.rs  change_name.rs  change_visibility.rs  custom_table.rs  detail.rs  general.rs  health.rs  logged_in.rs  logout.rs  oauth_redirect.rs  ranking.rs  reset.rs  song_log.rs  songs.rs  stats.rs  tables.rs  upload.rs  uploads.rs  users.rs
crates/service/: Cargo.toml
crates/service/src/: authorization.rs  custom_table.rs  lib.rs  play_data.rs  scores.rs  song_data.rs  songs.rs  status.rs  tables.rs  user.rs  users.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: lib.rs
crates/sqlite/src/schema/: score.rs  score_log.rs  song.rs
crates/table/: Cargo.toml
crates/table/src/: config.rs  file.rs  lib.rs  schema.rs
crates/ui/: Cargo.toml
crates/ui/res/: grid.css
crates/ui/src/: lib.rs  widget.rs
db/: Dockerfile  my.cnf
docker/builder/: Dockerfile  entrypoint.sh
migrations/2020-12-14-153548_create_users/: up.sql
migrations/2020-12-15-011605_create_hashes/: down.sql  up.sql
migrations/2020-12-15-012252_create_songs/: up.sql
migrations/2020-12-15-012256_create_scores/: down.sql  up.sql
migrations/2020-12-15-012301_create_score_snaps/: down.sql  up.sql
migrations/2021-01-01-170704_create_rename_logs/: down.sql  up.sql
migrations/2021-01-10-081241_add_features_to_score/: down.sql  up.sql
migrations/2021-01-24-155210_create_user_status/: down.sql  up.sql
migrations/2021-05-17-091857_create_admins/: down.sql  up.sql
migrations/2021-12-30-000000_create_player_stats/: down.sql  up.sql
migrations/2024-11-14-000000_create_score_upload_logs/: down.sql  up.sql
migrations/2024-11-18-000000_add_upload_id_score_snaps/: down.sql  up.sql
migrations/2024-11-18-000001_add_upload_id_scores/: down.sql  up.sql
migrations/2024-11-24-000000_add_index_upload_id/: down.sql  up.sql
migrations/2024-11-25-000000_add_user_stat_for_update/: down.sql  up.sql
migrations/2024-12-30-000000_create_revoked_sessions/: down.sql  up.sql
model/src/: lib.rs  score_log.rs
model/src/score/: min_bp.rs  mod.rs  song_id.rs
model/src/song/: hash.rs  hash_converter.rs
src/: app.rs  command.rs  config.rs  db.rs  file.rs  lamp.rs  lib.rs  main.rs  models.rs  rank.rs  score.rs  score_log.rs  scored_table.rs  song.rs  song_data.rs  summary.rs  table.rs
src/model/: mod.rs  player.rs  score.rs  song.rs
src/schema/: mod.rs  player.rs  score.rs  song.rs
src/score/: clear_type.rs  ex_score.rs  judge.rs  max_combo.rs  min_bp.rs  mod.rs  scores.rs  song_id.rs  updated_at.rs
src/score_log/: mod.rs
src/song/: artist.rs  hash_converter.rs  level.rs  title.rs
src/song_data/: mod.rs
src/whole_score/: mod.rs
src/whole_score/scores/: mod.rs
src/whole_score/scores/score/: clear_type.rs  mod.rs  song_id.rs  updated_at.rs
ui/src/: lib.rs
