[package]
name = "beatoraja_play_recommend"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "crates/model",
    "crates/ui",
    "crates/send_slack",
    "crates/config",
    "crates/table",
    "crates/controller",
    "crates/play_data"
]

[dependencies]
"controller" = {path = "crates/controller"}