[package]
name = "bpr_web"
version = "0.1.1"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"
description = "Beatoraja Play Recommendのモデルをフロントエンド用に出力したもの"
license = "MIT/Apache-2.0"
repository = "https://github.com/katandps/beatoraja_play_recommend"

[dependencies]
wasm-bindgen = "0.2.69"

model = { path = "../model" }

[lib]
crate-type = ["cdylib"]