[package]
name = "beatoraja_play_recommend"
version = "0.1.0"
edition = "2018"
authors = ["katand <katandps@gmail.com>"]
repository = "https://github.com/katandps/beatoraja_play_recommend"
description = "Wasm Client for Beatoraja Play Recommend"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
reqwest-wasm = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.78"

[lib]
name = "client"
crate-type = ["cdylib", "lib"]