[package]
name = "config"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features= ["derive"]}
serde_json = "1.0"
toml = "0.5.6"
lazy_static = "1.4.0"