[package]
name = "controller"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = {path = "../model"}
config = {path = "../config"}
send_slack = {path = "../send_slack"}
table = {path = "../table"}
sqlite = {path = "../sqlite"}
mysql = {path = "../mysql"}

# JSONのパース
serde = {version = "1.0", features= ["derive"]}
serde_json = "1.0"