[package]
name = "model"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137", features= ["derive"]}
serde_json = "1.0.81"

chrono = {version="0.4.11", features =["serde"]}

anyhow = "1.0.57"
thiserror = "1.0.31"

itertools = "0.9.0"
num-traits = "0.2.14"
num-derive = "0.3.3"