[package]
name = "model"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

chrono = { version = "0.4.38", features = ["serde"] }

anyhow = "1.0.93"
thiserror = "2.0.3"

itertools = "0.13.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
