[package]
name = "model"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }

chrono = { version = "0.4.38", features = ["serde"] }

anyhow = "1.0.97"

itertools = "0.14.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
