[package]
name = "mysql"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["mysql", "chrono", "r2d2"] }
r2d2 = "0.8.10"

serde = {version = "1.0.137", features= ["derive"]}
log = "0.4.16"

#エラー処理
anyhow = "1.0.57"
thiserror = "1.0.31"

chrono = "0.4.19"
envy = "0.4.2"
lazy_static = "1.4.0"

model = { path = "../model" }
repository = { path = "../repository" }
oauth_google = { path = "../oauth_google" }
