[package]
name = "mysql"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.8", features = ["mysql", "chrono", "r2d2"] }
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.26"
futures = "0.3.31"

#エラー処理
anyhow = "1.0.97"
thiserror = "2.0.12"

chrono = "0.4.40"
envy = "0.4.2"

itertools = "0.14.0"

model = { path = "../model" }
repository = { path = "../repository" }
oauth_google = { path = "../oauth_google" }
