[package]
name = "oauth_google"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137", features= ["derive"]}
serde_json = "1.0.81"

envy = "0.4.2"
lazy_static = "1.4.0"

reqwest = {version = "0.11.20", features = ["json"]}
base64 = "0.13.0"

anyhow = "1.0.75"
thiserror = "1.0.31"
log = "0.4.16"