[package]
name = "oauth_google"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

envy = "0.4.2"

reqwest = { version = "0.12.14", features = ["json"] }
base64 = "0.22.1"
anyhow = "1.0.97"
thiserror = "2.0.12"
log = "0.4.26"
