[package]
name = "send_slack"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
# HTTPリクエスト/非同期処理
reqwest = {version = "0.11.10", features = ["json", "blocking", "multipart"]}
tokio = { version = "1.18.1", features = ["macros"]}

# JSONのパース
serde = {version = "1.0.137", features= ["derive"]}
serde_json = "1.0.81"

lazy_static = "1.4.0"
envy = "0.4.2"

#エラー処理
anyhow = "1.0.75"
thiserror = "1.0.31"