[package]
name = "send_slack"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
# HTTPリクエスト/非同期処理
reqwest = { version = "0.12.14", features = ["json", "blocking", "multipart"] }

# JSONのパース
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

envy = "0.4.2"

#エラー処理
anyhow = "1.0.97"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros"] }
