[package]
name = "server"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"

tokio = { version = "1.18.1", features = ["full"] }
warp = { version = "0.3.7", features = ["tls", "compression"] }
reqwest = { version = "0.12.9", features = ["json"] }

env_logger = "0.11.5"
log = "0.4.17"

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

tempfile = "3.2.0"

r2d2 = "0.8.9"
bytes = "1.1.0"

rand = "0.8.0"
rand_chacha = "0.3.0"
base64 = "0.22.1"

diesel = { version = "2.1.1", features = ["mysql", "r2d2"] }
chrono = "0.4.26"
redis = "0.27.5"

anyhow = "1.0.75"
thiserror = "2.0.2"
envy = "0.4.2"

model = { path = "../model" }
table = { path = "../table" }
sqlite = { path = "../sqlite" }
mysql = { path = "../mysql" }
oauth_google = { path = "../oauth_google" }
repository = { path = "../repository" }
