[package]
name = "server"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"

tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.7", features = ["compression", "tls"] }

env_logger = "0.11.7"
log = "0.4.26"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tempfile = "3.18.0"

bytes = "1.10.1"

chrono = "0.4.40"

anyhow = "1.0.97"
thiserror = "2.0.12"
envy = "0.4.2"

model = { path = "../model" }
table = { path = "../table" }
sqlite = { path = "../sqlite" }
mysql = { path = "../mysql" }
oauth_google = { path = "../oauth_google" }
repository = { path = "../repository" }
session = { path = "../session" }
service = { path = "../service" }
