[package]
name = "service"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
table = { path = "../table" }
repository = { path = "../repository" }
session = { path = "../session" }
sqlite = { path = "../sqlite" }

log = "0.4.26"
anyhow = "1.0.97"
futures = "0.3.31"
rand = "0.9.0"
tempfile = "3.2.0"
chrono = "0.4.26"
