[package]
name = "session"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.26"
serde = { version = "1.0.214", features = ["derive"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }

model = { path = "../model" }
