[package]
name = "sqlite"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = {path = "../model"}
config = {path = "../config"}

# SqLiteへのアクセス
diesel = { version = "1.4.5", features = ["sqlite"]}
diesel_codegen = "0.16.1"
#エラー処理
anyhow = "1.0"
