[package]
name = "sqlite"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"]}

anyhow = "1.0"
thiserror = "1.0.23"

model = {path = "../model"}
