[package]
name = "sqlite"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.4", features = ["sqlite"] }
thiserror = "2.0.3"

model = { path = "../model" }
