[package]
name = "table"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
log = "0.4.22"
rand = { version = "0.8.5" }

# JSONのパース
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
toml = { version = "0.8.19" }
envy = "0.4.2"

#urlパーサ
url = "2.5.3"

dirs = "6.0.0"

#エラー処理
anyhow = "1.0.93"
thiserror = "2.0.3"

#HTMLパーサ
scraper = "0.22.0"

# HTTPリクエスト/非同期処理
reqwest = { version = "0.12.9", features = ["json"] }
futures = "0.3.31"
