[package]
name = "table"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
repository = { path = "../repository" }

log = "0.4.26"
rand = { version = "0.9.0" }

# JSONのパース
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = { version = "0.8.20" }
envy = "0.4.2"

#urlパーサ
url = "2.5.4"

dirs = "6.0.0"

#エラー処理
anyhow = "1.0.97"
thiserror = "2.0.12"

#HTMLパーサ
scraper = "0.23.1"

# HTTPリクエスト/非同期処理
reqwest = { version = "0.12.14", features = ["json"] }
futures = "0.3.31"
